--- a/stylez.css
+++ b/stylez.css
@@ -13,8 +13,9 @@ html, body {
 
 nav {
   float: right;
-  margin-right: 50px;
+  margin-right: 30px;
   display: flex;
+  align-items: center;
   margin-top: 15px;
 }
 
@@ -24,12 +25,17 @@ nav > a {
   font-size: 13px;
   margin-left: 15px;
   opacity: .75;
-  align-items: center;
-  line-height: 28px;
+  cursor: pointer;
+  
 }
 
 .material-icons {
   opacity: .7;
+}
+
+.material-icons:hover {
+  opacity: 1;
+  cursor: pointer;
 }
 
 .signInButton {
@@ -59,18 +65,26 @@ nav > a {
 }
 
 .logo {
-  margin-top: 50px;
+  margin-top: 100px;
   text-align: center;
   font-family: "Product Sans";
   font-size: 80px;
+  margin-bottom: 10px;
 }
 
-
-.mainSearch {
-  display: block;
-  height: 35px;
+.inputContainer {
   width: 600px;
   margin: 0 auto;
+  border: thin solid black;
+  display: flex;
+  align-items: center;
+}
+
+.mainSearch {
+  height: 35px;
+  width: 93%;
+  border: none;
+  
 }
 
 .buttonGroup {
@@ -87,6 +101,7 @@ nav > a {
   background-color: #f2f2f2;
   color: #757575;
   font-size: 13px;
+  margin-bottom: 20px;
 }
 
 .footer,
@@ -114,7 +129,7 @@ footer > ul > li > a {
 
 a:hover {
   text-decoration: underline;
-  cursor: default;
+  cursor: pointer;
 }
 
 .fLeft {
