--- a/stylez.css
+++ b/stylez.css
@@ -72,6 +72,10 @@ nav > a {
   margin-bottom: 10px;
 }
 
+.logo:nth-child(2), .logo:nth-child(4) {
+  color: #4285f4;
+}
+
 .inputContainer {
   width: 600px;
   margin: 0 auto;
