--- a/stylez.css
+++ b/stylez.css
@@ -160,6 +160,7 @@ input:focus {
   background-color: #f2f2f2;
   min-width: 1000px;
   border-top: thin solid #d2d2d2;
+  overflow: auto;
 }
 
 ul>li {
